[package]
name = "httpsloth"
version = "2.3.1"
edition = "2018"
authors = ["Andrey Voronkov <voronkovaa@gmail.com>"]

[dependencies]
clap = "2"
env_logger = "0"
log = "0"
tokio = { version = "0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-rustls = "0"
url = "2"
webpki-roots = "0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"