[package]
name = "httpsloth"
version = "3.0.3"
edition = "2021"
authors = ["Andrey Voronkov <voronkovaa@gmail.com>"]

[dependencies]
clap = "4"
env_logger = "0"
log = "0"
tokio = { version = "1", features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-rustls = "0"
url = "2"
webpki-roots = "0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"